...
                
                // Sign Up Link
                HStack {
                    Text("Don't have an account?")
                        .foregroundColor(.secondary)
                    
                    Button("Sign Up") {
                        showingSignup = true
                    }
                    .foregroundColor(Color.blue)
                }
                .padding(.bottom, 20)
            }
...
